Fixed bug Launching

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,33 +9,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewGameActivity"
+            android:name="com.solaldussout_revel.mastermind.MainActivity"
             android:label="@string/title_activity_new_game"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.NewGame" />
-
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.solaldussout_revel.mastermind.GameActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <!--
- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
-        -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
         <activity
-            android:name=".RulesActivity"
+            android:name="com.solaldussout_revel.mastermind.RulesActivity"
             android:label="@string/title_activity_rules"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MenuParentActivity"
+            android:name="com.solaldussout_revel.mastermind.MenuParentActivity"
             android:label="@string/title_activity_menu_parent"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
